syntax = "proto3";

option go_package="github.com/c12s/starmap/api";
package proto;

message EmptyMessage {}

message DataSource {
  string id = 1;
  string name = 2;
  string type = 3;
  string path = 4;
  string resourceName = 5;
  string description = 6;
  map<string, string> labels = 7;
}

message Metadata {
  string id = 1;
  string name = 2;
  string image = 3;
  string prefix = 4;
  string topic = 5;
  string description = 6;
  map<string, string> labels = 7;
}

message Control {
  bool disableVirtualization = 1;
  bool runDetached = 2;
  bool removeOnStop = 3;
  string memory = 4;
  string kernelArgs = 5;
}

message Features {
  repeated string networks = 1;
  repeated string ports = 2;
  repeated string volumes = 3;
  repeated string targets = 4;
  repeated string envVars = 5;
}

message Links {
  repeated string softLinks = 1;
  repeated string hardLinks = 2;
  repeated string eventLinks = 3;
}

message StoredProcedure {
  Metadata metadata = 1;
  Control control = 2;
  Features features = 3;
  Links links = 4;
}

message Event {
  Metadata metadata = 1;
  Control control = 2;
  Features features = 3;
}

message EventTrigger {
  Metadata metadata = 1;
  Control control = 2;
  Features features = 3;
  Links links = 4;
}

message Chart {
  map<string, DataSource> dataSources = 1;
  map<string, StoredProcedure> storedProcedures = 2;
  map<string, EventTrigger> eventTriggers = 3;
  map<string, Event> events = 4;
}

message MetadataChart {
    string id = 1;
    string name = 2;
    string namespace = 3;
    string maintainer = 4;
    string description = 5;
    string visibility = 6;
    string engine = 7;
    map<string, string> labels = 8;
  }

message StarChart {
  string apiVersion = 1;
  string schemaVersion = 2;
  string kind = 3;

  MetadataChart metadata = 4;
  Chart chart = 5;
}